maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:16: error: expected class or object definition
def KeepHandOnSideWall(angle:Int):Int={
^Escaper:26: error: expected class or object definition
def murAGauche():Boolean={
^Escaper:33: error: expected class or object definition
def regardeLeNord():Boolean={
^Escaper:38: error: Unmatched closing brace '}' ignored here
}
^